# strecklistan

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  flake.nix
.github/workflows/: docker-build.yml
backend/: Cargo.toml  example.env
backend/src/: main.rs
backend/src/database/: event.rs  mod.rs  transaction.rs
backend/src/models/: event.rs  inventory.rs  izettle_transaction.rs  signup.rs  transaction.rs
backend/src/routes/rest/: book_account.rs  event.rs  inventory.rs  member.rs  receipt.rs  transaction.rs
backend/src/routes/rest/izettle/: izettle_bridge_poll.rs  izettle_bridge_result.rs  izettle_transaction.rs  izettle_transaction_poll.rs  mod.rs
backend/src/util/: catchers.rs  csv_response.rs  mod.rs  ord.rs  ser.rs  status_json.rs  testing.rs
backend/src/util/file/: cached_file.rs  responder.rs
backend/templates/: receipt.html.hbs
common/: Cargo.toml
docker/: dev.backend.Dockerfile  dev.frontend.Dockerfile  start_backend.sh
frontend/: Cargo.toml  docker.Trunk.toml
frontend/src/: app.rs  lib.rs  notification_manager.rs  strings.rs
frontend/src/components/: checkout.rs  filter_menu.rs  izettle_pay.rs  parsed_input.rs
frontend/src/models/: event.rs
frontend/src/page/: analytics.rs  deposit.rs  inventory.rs  store.rs  transactions.rs
frontend/src/util/: export.rs
frontend/src/views/: inventory.rs  tillgodolista.rs
frontend/static/styles/: common.css  notifications.css
