[workspace]
members = ["backend", "common", "frontend"]
resolver = "3"

[workspace.dependencies]
diesel = { version = "2.3.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.3.1"
diesel_derives = "2.3.5"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
itertools = "0.14.0"

[profile.dev]
# Issue with const-generics
incremental = false

[profile.release]
lto = true
opt-level = 's'
# Issue with const-generics
incremental = false
