[package]
name = "strecklistan_api"
version = "0.14.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
license = "MPL-2.0"
description = "Public API types and functions of strecklistan: a simple web-shop"
repository = "https://github.com/hulthe/strecklistan"
edition = "2024"
workspace = ".."

[dependencies]
diesel = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
diesel-derive-enum = { workspace = true, optional = true }
diesel_derives = { workspace = true, optional = true }
chrono.workspace = true

getset = "0.1"
regex = "1"
lazy_static = "1"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["serde_impl", "debug", "hash"]

diesel_impl = ["diesel", "diesel_derives", "diesel-derive-enum", "diesel-derive-enum/postgres"]
serde_impl = ["serde", "chrono/serde"]

debug = []
eq = []
hash = []
