[package]
name = "strecklistan_web"
version = "0.14.0"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
license = "MPL-2.0"
description = "The frontend of strecklistan: a simple web-shop"
repository = "https://github.com/hulthe/strecklistan"
readme = "../README.rst"
edition = "2024"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { version = "0.10.0", features = ['routing'] }
cfg-if = "1.0.0"
wasm-bindgen = "0.2.106"
js-sys = "0.3"
futures = "0.3.12"
itertools = "0.10"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
csv = "1.1"
mime = "0.3"
semver = "0.11.0"
uuid = { version = "1.19.0", features = ['js'] }

# Custom allocator. Smaller & slower than the default.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-console = "0.3.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["serde", "wasmbind", "js-sys"]

[dependencies.strecklistan_api]
path = "../common"

[dependencies.seed_fetcher]
git = "https://github.com/hulthe/seed_fetcher.git"
branch = "master"

[dependencies.css_typegen]
git = "https://github.com/hulthe/css_typegen.git"
branch = "master"

[dependencies.web-sys]
version = "0.3.47"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent",
]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.20" # NOTE: keep in sync with wasm-bindgen version
